[gd_scene load_steps=47 format=1]

[ext_resource path="res://Images/underGround2.png" type="Texture" id=1]
[ext_resource path="res://Images/game-background.jpg" type="Texture" id=2]
[ext_resource path="res://Images/sky.png" type="Texture" id=3]
[ext_resource path="res://Images/game-background2.jpg" type="Texture" id=4]
[ext_resource path="res://Images/wall.png" type="Texture" id=5]
[ext_resource path="res://ground.gd" type="Script" id=6]
[ext_resource path="res://Player.gd" type="Script" id=7]
[ext_resource path="res://Images/CharacterSprites/idle/frame-1.png" type="Texture" id=8]
[ext_resource path="res://Images/CharacterSprites/idle/frame-2.png" type="Texture" id=9]
[ext_resource path="res://Images/CharacterSprites/run/frame-1.png" type="Texture" id=10]
[ext_resource path="res://Images/CharacterSprites/run/frame-2.png" type="Texture" id=11]
[ext_resource path="res://Images/CharacterSprites/run/frame-3.png" type="Texture" id=12]
[ext_resource path="res://Images/CharacterSprites/run/frame-4.png" type="Texture" id=13]
[ext_resource path="res://Images/CharacterSprites/faint/frame-1.png" type="Texture" id=14]
[ext_resource path="res://Images/CharacterSprites/faint/frame-2.png" type="Texture" id=15]
[ext_resource path="res://Images/CharacterSprites/faint/frame-3.png" type="Texture" id=16]
[ext_resource path="res://Images/CharacterSprites/jump up/frame.png" type="Texture" id=17]
[ext_resource path="res://Images/CharacterSprites/dizzy/frame-1.png" type="Texture" id=18]
[ext_resource path="res://Images/CharacterSprites/dizzy/frame-2.png" type="Texture" id=19]
[ext_resource path="res://Images/CharacterSprites/jump fall/frame.png" type="Texture" id=20]
[ext_resource path="res://platform.gd" type="Script" id=21]
[ext_resource path="res://Images/platform2.png" type="Texture" id=22]
[ext_resource path="res://Images/platform3.png" type="Texture" id=23]
[ext_resource path="res://Enemy1.gd" type="Script" id=24]
[ext_resource path="res://Images/Enemy1/1.png" type="Texture" id=25]
[ext_resource path="res://Images/Enemy1/2.png" type="Texture" id=26]
[ext_resource path="res://Images/Enemy1/3.png" type="Texture" id=27]
[ext_resource path="res://Images/Enemy1/4.png" type="Texture" id=28]
[ext_resource path="res://Images/Enemy1/5.png" type="Texture" id=29]
[ext_resource path="res://Images/Enemy1/6.png" type="Texture" id=30]
[ext_resource path="res://Images/Enemy1/7.png" type="Texture" id=31]
[ext_resource path="res://Images/Enemy1/8.png" type="Texture" id=32]
[ext_resource path="res://Blade.tscn" type="PackedScene" id=33]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 227.64, 730.794 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 2677.85, 51.1179 )

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 40.388

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( 0, -10, 8.66025, 5, -8.66025, 5 )

[sub_resource type="CapsuleShape2D" id=5]

custom_solver_bias = 0.0
radius = 9.94775
height = 9.26221

[sub_resource type="SpriteFrames" id=6]

animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "running",
"speed": 6.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "faint",
"speed": 4.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "jumpUp",
"speed": 4.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "dmgTaken",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "jumpDown",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 32.4087, 30.3346 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 177.724, 16.8464 )

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 386.625, 11.9142 )

[sub_resource type="RectangleShape2D" id=10]

custom_solver_bias = 0.0
extents = Vector2( 10, 26.6757 )

[sub_resource type="RectangleShape2D" id=11]

custom_solver_bias = 0.0
extents = Vector2( 34.0192, 31.0986 )

[sub_resource type="RectangleShape2D" id=12]

custom_solver_bias = 0.0
extents = Vector2( 38.2664, 36.7815 )

[sub_resource type="SpriteFrames" id=13]

animations = [ {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "moving",
"speed": 2.5
} ]

[node name="Main" type="Node2D"]

[node name="bgGround" type="Sprite" parent="."]

transform/pos = Vector2( 797.859, 673.958 )
transform/scale = Vector2( 1.99713, 1 )
texture = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]

transform/pos = Vector2( 404.458, 298.526 )
transform/scale = Vector2( 1, 1.0782 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 0, 0, 800, 550 )

[node name="bg3" type="Sprite" parent="."]

transform/pos = Vector2( -392.542, 298.526 )
transform/scale = Vector2( 1, 1.0782 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 0, 0, 800, 550 )

[node name="bg1" type="Sprite" parent="."]

transform/pos = Vector2( 1197.04, 298.526 )
transform/scale = Vector2( 1, 1.0782 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 0, 0, 800, 550 )

[node name="bg2" type="Sprite" parent="."]

transform/pos = Vector2( 1996.04, 298.526 )
transform/scale = Vector2( 1, 1.0782 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 0, 0, 800, 550 )

[node name="bgSky" type="Sprite" parent="."]

transform/pos = Vector2( 1162.85, -407.995 )
transform/scale = Vector2( 2.43647, 1 )
texture = ExtResource( 3 )

[node name="bg4" type="Sprite" parent="."]

transform/pos = Vector2( 2793.14, 271.342 )
transform/scale = Vector2( 1, 1.07687 )
texture = ExtResource( 2 )

[node name="bg5" type="Sprite" parent="."]

transform/pos = Vector2( 4389.69, 269.927 )
transform/scale = Vector2( 1, 1.07158 )
texture = ExtResource( 4 )

[node name="leftBorder" type="StaticBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -389.585, 177.66 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftBorder"]

transform/pos = Vector2( -389.585, 177.66 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="leftBorder"]

transform/pos = Vector2( -390.556, -74.9166 )
transform/scale = Vector2( 0.528809, 0.853139 )
texture = ExtResource( 5 )

[node name="ground" type="StaticBody2D" parent="."]

transform/pos = Vector2( 402.393, 532.737 )
transform/scale = Vector2( 1.95256, 1.58279 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1.03855, 0, 0, 0.95382, 772.082, -18.3469 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground"]

transform/pos = Vector2( 772.082, -18.3469 )
transform/scale = Vector2( 1.03855, 0.95382 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Player" type="RigidBody2D" parent="."]

transform/pos = Vector2( 333.901, 367.502 )
transform/scale = Vector2( 1, 0.963709 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 0.943587, 0, 0, 1.02167, 3.00302, -27.834 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 4 )
shapes/1/transform = Matrix32( 3.66204, 0, 0, 3.57182, 0.302063, 37.2829 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 5 )
shapes/2/transform = Matrix32( 0.704371, -0.709832, 0.709832, 0.704371, 25.0872, 32.4258 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 5 )
shapes/3/transform = Matrix32( 0.680858, 0.732415, -1.05586, 0.98154, -25.2715, 25.9384 )
shapes/3/trigger = false
collision/layers = 3
collision/mask = 3
mode = 2
mass = 1.25
friction = 1.0
bounce = 0.0
gravity_scale = 4.35
custom_integrator = false
continuous_cd = 0
contacts_reported = 6
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = 128.0
script/script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Player"]

transform/pos = Vector2( -3.71735, -3.28151 )
transform/scale = Vector2( 0.292098, 0.301535 )
frames = SubResource( 6 )
animation = "idle"
frame = 1
playing = true

[node name="Camera2D" type="Camera2D" parent="Player/Sprite"]

transform/pos = Vector2( 12.7263, 10.8827 )
transform/scale = Vector2( 3.42351, 3.31636 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]

transform/pos = Vector2( 3.00302, -27.834 )
transform/scale = Vector2( 0.943587, 1.02167 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="Player"]

transform/pos = Vector2( 0.302063, 37.2829 )
transform/scale = Vector2( 3.66204, 3.57182 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 1

[node name="CollisionShape2D 3" type="CollisionShape2D" parent="Player"]

transform/pos = Vector2( 25.0872, 32.4258 )
transform/rot = 45.2212
shape = SubResource( 5 )
trigger = false
_update_shape_index = 2

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Player"]

transform/pos = Vector2( -25.2715, 25.9384 )
transform/rot = -47.0892
transform/scale = Vector2( 1, 1.44162 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 3

[node name="fireballStart" type="Position2D" parent="Player"]

transform/pos = Vector2( 93.6652, -4.1785 )

[node name="fireballStart2" type="Position2D" parent="Player"]

transform/pos = Vector2( -105.472, -2.2995 )

[node name="Range" type="Area2D" parent="Player"]

transform/pos = Vector2( 14.6784, -94.5668 )
transform/scale = Vector2( 13.5561, 4.8326 )
input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Range"]

shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="Platform" type="StaticBody2D" parent="."]

transform/pos = Vector2( 11.8712, 6.61581 )
input/pickable = false
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1058.01, 339.996 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
one_way_collision/direction = Vector2( 0, 1 )
one_way_collision/max_depth = 20.0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 21 )
__meta__ = {
"_edit_group_": true
}

[node name="platformIm" type="Sprite" parent="Platform"]

transform/pos = Vector2( 1056.81, 339.212 )
transform/scale = Vector2( 0.723611, 0.554237 )
texture = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]

transform/pos = Vector2( 1058.01, 339.996 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="Platform1" type="StaticBody2D" parent="."]

transform/pos = Vector2( 468.937, -72.2956 )
input/pickable = false
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1056.78, 339.996 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
one_way_collision/direction = Vector2( 0, 1 )
one_way_collision/max_depth = 16.0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 21 )
__meta__ = {
"_edit_group_": true
}

[node name="platformIm" type="Sprite" parent="Platform1"]

transform/pos = Vector2( 1056.81, 339.212 )
transform/scale = Vector2( 0.723611, 0.554237 )
texture = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform1"]

transform/pos = Vector2( 1056.78, 339.996 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="Platform2" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 26.8354, -168.513 )
input/pickable = false
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1056.78, 339.996 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
one_way_collision/direction = Vector2( 0, 1 )
one_way_collision/max_depth = 16.0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 21 )
__meta__ = {
"_edit_group_": true
}

[node name="platformIm" type="Sprite" parent="Platform2"]

transform/pos = Vector2( 1056.81, 339.212 )
transform/scale = Vector2( 0.723611, 0.554237 )
texture = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform2"]

transform/pos = Vector2( 1056.78, 339.996 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="Platform3" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 454.073, -258.358 )
input/pickable = false
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1060.19, 339.996 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
one_way_collision/direction = Vector2( 0, 1 )
one_way_collision/max_depth = 16.0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 21 )
__meta__ = {
"_edit_group_": true
}

[node name="platformIm" type="Sprite" parent="Platform3"]

transform/pos = Vector2( 1056.81, 339.212 )
transform/scale = Vector2( 0.723611, 0.554237 )
texture = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform3"]

transform/pos = Vector2( 1060.19, 339.996 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="LongPlatform" type="StaticBody2D" parent="."]

transform/pos = Vector2( 20.5054, 47.1626 )
input/pickable = false
shapes/0/shape = SubResource( 9 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 2168.12, -23.3665 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 21 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="LongPlatform"]

transform/pos = Vector2( 2169.88, -24.8589 )
transform/scale = Vector2( 1.54582, 0.505729 )
texture = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LongPlatform"]

transform/pos = Vector2( 2168.12, -23.3665 )
shape = SubResource( 9 )
trigger = false
_update_shape_index = 0

[node name="LongPlatform1" type="StaticBody2D" parent="."]

transform/pos = Vector2( 938.256, -876.168 )
input/pickable = false
shapes/0/shape = SubResource( 9 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 2168.12, -23.3665 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 21 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="LongPlatform1"]

transform/pos = Vector2( 2169.88, -24.8589 )
transform/scale = Vector2( 1.54582, 0.505729 )
texture = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LongPlatform1"]

transform/pos = Vector2( 2168.12, -23.3665 )
shape = SubResource( 9 )
trigger = false
_update_shape_index = 0

[node name="LongPlatform2" type="StaticBody2D" parent="."]

transform/pos = Vector2( 19.5264, 2.78949 )
input/pickable = false
shapes/0/shape = SubResource( 10 )
shapes/0/transform = Matrix32( 1.79669, 0, 0, 16.1865, 2725.49, -445.328 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 21 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="LongPlatform2"]

transform/pos = Vector2( 2722.01, -440.783 )
transform/scale = Vector2( 0.698923, 1 )
texture = ExtResource( 23 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LongPlatform2"]

transform/pos = Vector2( 2725.49, -445.328 )
transform/scale = Vector2( 1.79669, 16.1865 )
shape = SubResource( 10 )
trigger = false
_update_shape_index = 0

[node name="Range" type="Area2D" parent="."]

transform/pos = Vector2( 1064.22, 277.228 )
transform/scale = Vector2( 3.39547, 1.63099 )
input/pickable = true
shapes/0/shape = SubResource( 11 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]

shape = SubResource( 11 )
trigger = false
_update_shape_index = 0

[node name="Enemy1" type="RigidBody2D" parent="."]

transform/pos = Vector2( 1094.32, 291.261 )
input/pickable = false
shapes/0/shape = SubResource( 12 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 12.0
friction = 1.0
bounce = 0.0
gravity_scale = 5.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 4
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = 10.0
damp_override/angular = 10.0
script/script = ExtResource( 24 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Enemy1"]

transform/scale = Vector2( 0.0880342, 0.0908171 )
frames = SubResource( 13 )
animation = "moving"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy1"]

shape = SubResource( 12 )
trigger = false
_update_shape_index = 0

[node name="Main" parent="." instance=ExtResource( 33 )]

transform/pos = Vector2( 343.407, -463.462 )
transform/scale = Vector2( 0.380523, 0.402354 )

[node name="Main" parent="Main" instance=ExtResource( 33 )]

[connection signal="body_enter" from="Player" to="Player" method="_on_Player_body_enter"]

[connection signal="body_exit" from="Player" to="Player" method="_on_Player_body_exit"]

[connection signal="body_exit" from="Player/Range" to="Player" method="_on_Range_body_exit"]

[connection signal="body_exit" from="Range" to="Enemy1" method="_on_Range_body_exit"]

[connection signal="body_enter" from="Enemy1" to="Enemy1" method="_on_Enemy1_body_enter"]


